docs/apache-airflow/1.10.6/_sources/_api/airflow/contrib/hooks/grpc_hook/index.rst.txt
:mod:`airflow.contrib.hooks.grpc_hook`
======================================

.. py:module:: airflow.contrib.hooks.grpc_hook

.. autoapi-nested-parse::

   GRPC Hook



Module Contents
---------------

.. py:class:: GrpcHook(grpc_conn_id, interceptors=None, custom_connection_func=None)

   Bases: :class:`airflow.hooks.base_hook.BaseHook`

   General interaction with gRPC servers.

   
   .. method:: get_conn(self)



   
   .. method:: run(self, stub_class, call_func, streaming=False, data=None)



   
   .. method:: _get_field(self, field_name, default=None)

      Fetches a field from extras, and returns it. This is some Airflow
      magic. The grpc hook type adds custom UI elements
      to the hook page, which allow admins to specify scopes, credential pem files, etc.
      They get formatted as shown below.




